# enterprisebridge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: session_worker.py  v1_imap_stateless.py  v1_smtp_stateless.py  v2_imap_memory_pool.py  v2_smtp_memory_pool.py  v3_imap_redis_pool.py  v3_proxy_api.py  v3_smtp_redis_pool.py  v3_transformer_rag.py
tests/: test_integration_real_servers.py  test_latency_breakdown.py  test_v1_imap_stateless.py  test_v1_smtp_stateless.py  test_v2_imap_memory_pool.py  test_v2_smtp_memory_pool.py  test_v3_api_mimicry.py  test_v3_imap_redis_pool.py  test_v3_smtp_redis_pool.py  test_v3_transformer_rag.py
tests/benchmark/: test_latency.py  test_workflow.py
tests/integration/: test_full_proxy.py
